trying to solve the jumps on web load

--- a/bowie-bridge.css
+++ b/bowie-bridge.css
@@ -55,12 +55,12 @@ a:hover {
 }
 
 
-body #wrap #inner-wrap div#banner .page-width .header #logo div {
+/*body #wrap #inner-wrap div#banner .page-width .header #logo div {
   background-repeat: no-repeat;
   background-position: -258px -353px;
   height: 20px;
   width: 54px;
-}
+}*/
 
 /*  Masthead  */
 
